Transcript acn change language too. Closes #104

--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -29,7 +29,7 @@
   </div>
   <div class="row my-2">
     <div class="col text-center">
-      <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None)" class="btn btn-primary">
+      <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None, None)" class="btn btn-primary">
         <i class="fa fa-book"></i>&nbsp;@Messages("interview.transcript")
       </a>
     </div>
