--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -59,14 +59,14 @@
               <i class="fa fa-download"></i>&nbsp;@Messages("interview.download.json")
             </a>
             <div class="btn-group">
-              <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None)" class="btn btn-primary">
+              <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None, None)" class="btn btn-primary">
                 <i class="fa fa-book"></i>&nbsp;@Messages("interview.transcript")
               </a>
               <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="sr-only">Toggle Dropdown</span>
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, Some("xml"))">@Messages("interview.download.xml")</a>
+                <a class="dropdown-item" href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, Some("xml"), None)">@Messages("interview.download.xml")</a>
               </div>
             </div>
           </div>
