Cleanup of the detailed report view

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -448,7 +448,6 @@ table.engine-trace {
 
   .bigNote {
     color: @theme1;
-    background-color: @theme3;
     border-radius: 1em;
     padding: 1em;
     margin: 1em;
@@ -468,6 +467,10 @@ table.engine-trace {
     font-size: 12pt;
     text-shadow: none;
   }
+}
+
+.detailedValue-container .topValueCtnr {
+  margin-top: 1rem;
 }
 
 @media (max-width: 667px ) {
