When a valus is diplayed more than once and has a BigNote, the correct note instance is toggeled when the button is clicked

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -20,6 +20,13 @@ h1, h2, h3 {
   text-align: center;
 }
 
+.btn-txt {
+  height: 1rem;
+  padding: 0 .5rem;
+  font-size: .7rem;
+  line-height: .7rem;
+}
+
 .startButtonsCtnr {
   text-align: center;
   padding: @borderRadiusStd;
@@ -466,6 +473,11 @@ table.engine-trace {
   h3 {
     font-size: 12pt;
     text-shadow: none;
+    font-weight: bold;
+
+    .smallNote {
+      font-weight: normal;
+    }
   }
 }
 
