Fixed RTL issues and interface for long answer lists

--- a/datatags-app/app/assets/css/main.less
+++ b/datatags-app/app/assets/css/main.less
@@ -840,5 +840,17 @@ details summary .detailedSlotTitle {
 }
 
 .listDisplay {
-  text-align: left;
+  padding: .1rem;
+
+  button {
+    display: block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 576px) {
+  .listDisplay {
+    column-count: 2;
+    padding: .5rem;
+  }
 }
