--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -58,7 +58,7 @@
             <a href="@routes.InterviewCtrl.downloadTags" class="btn btn-primary">
               <i class="fa fa-download"></i>&nbsp;@Messages("interview.download.json")
             </a>
-            <div class="btn-group">
+            <div class="btn-group rtl-aware">
               <a href="@routes.InterviewCtrl.transcript(session.kit.md.id.modelId, session.kit.md.id.version, None, None)" class="btn btn-primary">
                 <i class="fa fa-book"></i>&nbsp;@Messages("interview.transcript")
               </a>
