--- a/datatags-app/app/views/comps/valueAtom.scala.html
+++ b/datatags-app/app/views/comps/valueAtom.scala.html
@@ -3,7 +3,7 @@
 @import edu.harvard.iq.policymodels.util.PolicySpaceHelper
 @( value : edu.harvard.iq.policymodels.model.policyspace.values.AtomicValue, loc:Localization )
 @defining(
-  Helpers.o2o(loc.getSlotValueText(value))
+  Helpers.o2o(loc.getSlotValueTexts(value))
           .getOrElse( new LocalizationTexts(PolicySpaceHelper.name(value), PolicySpaceHelper.note(value), null))
 ){ texts =>
   @if( texts.smallNote==null || texts.smallNote.isEmpty ) {
