--- a/datatags-app/app/views/backoffice/customization.scala.html
+++ b/datatags-app/app/views/backoffice/customization.scala.html
@@ -22,7 +22,7 @@
   </script>
 }
 
-@templates.backend("Manage PolicyModels Server", 'customize, scripts, extraHead){
+@templates.backend("Manage PolicyModels Server", Symbol("customize"), scripts, extraHead){
 <div class="row my-2 flex-row">
   <div class="col flex-grow-1">
     <h1>
