--- a/datatags-app/app/views/backoffice/modelEditor.scala.html
+++ b/datatags-app/app/views/backoffice/modelEditor.scala.html
@@ -5,7 +5,7 @@
 }
 
 
-@templates.backend("Model Editor", 'backOffice, scripts ) {
+@templates.backend("Model Editor", Symbol("backOffice"), scripts ) {
 
   <div class="row my-2">
     <div class="col">
