--- a/datatags-app/app/views/backoffice/modelList.scala.html
+++ b/datatags-app/app/views/backoffice/modelList.scala.html
@@ -1,6 +1,6 @@
 @( models:Seq[Model], message:Option[String] )
 
-@templates.backend("Model Editor", 'backOffice ) {
+@templates.backend("Model Editor", Symbol("backOffice") ) {
   <div class="row">
     <div class="col-md-12">
       <h1>
