--- a/datatags-app/app/views/backoffice/modelViewer.scala.html
+++ b/datatags-app/app/views/backoffice/modelViewer.scala.html
@@ -16,7 +16,7 @@
   <script src="@routes.Assets.at("js/DeleteVersion.js")"></script>
 }
 
-@templates.backend("Model Editor", 'backOffice, scripts ) {
+@templates.backend("Model Editor", Symbol("backOffice"), scripts ) {
 
   <div class="row my-2 d-flex flex-row">
     <div class="col flex-grow-1">
