--- a/datatags-app/app/views/interview/accepted.scala.html
+++ b/datatags-app/app/views/interview/accepted.scala.html
@@ -22,7 +22,7 @@
 }
 
 
-@templates.bsNavBar("Interview Completed", 'ask, scripts, extraHead) {
+@templates.bsNavBar("Interview Completed", Symbol("ask"), scripts, extraHead) {
   <div class="row">
     <div class="col">
       <div class="d-flex justify-content-end align-items-baseline" style="margin:0 .5rem">
