--- a/datatags-app/app/views/interview/question.scala.html
+++ b/datatags-app/app/views/interview/question.scala.html
@@ -16,7 +16,7 @@
 
 @import views.Helpers
 
-@templates.bsNavBar( Messages("interview.question"), 'tag, scripts, extraHead ) {
+@templates.bsNavBar( Messages("interview.question"), Symbol("tag"), scripts, extraHead ) {
   <div class="row">
     <div class="col">
       <div class="d-flex justify-content-end align-items-baseline" style="margin:0 .5rem">
