--- a/datatags-app/app/views/interview/rejected.scala.html
+++ b/datatags-app/app/views/interview/rejected.scala.html
@@ -13,7 +13,7 @@
 }
 }
 
-@templates.bsNavBar(Messages("interview.datasetRejected"), 'tag, extraHead = extraHead) {
+@templates.bsNavBar(Messages("interview.datasetRejected"), Symbol("tag"), extraHead = extraHead) {
   <div class="row">
     <div class="col">
       <div class="d-flex justify-content-end align-items-baseline" style="margin:0 .5rem">
