--- a/datatags-app/app/views/publicModelViewer.scala.html
+++ b/datatags-app/app/views/publicModelViewer.scala.html
@@ -8,7 +8,7 @@
   </script>
 }
 
-@templates.bsNavBar(model.title, 'frontEnd, scripts ) {
+@templates.bsNavBar(model.title, Symbol("frontEnd"), scripts ) {
 
   <div class="row">
     <div class="col-md-8">
