--- a/datatags-app/app/views/backoffice/index.scala.html
+++ b/datatags-app/app/views/backoffice/index.scala.html
@@ -1,6 +1,6 @@
 @(user:User, recentComments:Seq[CommentDN])
 
-@templates.backend("Manage PolicyModels Server", 'index){
+@templates.backend("Manage PolicyModels Server", Symbol("index")){
   <div class="row my-2">
     <div class="col">
       <h3>Hello, @user.name!</h3>
