--- a/datatags-app/app/views/backoffice/users/userList.scala.html
+++ b/datatags-app/app/views/backoffice/users/userList.scala.html
@@ -1,5 +1,5 @@
 @(users:Seq[User], curUser:User)
-@templates.backend("Users", 'backOffice ) {
+@templates.backend("Users", Symbol("backOffice") ) {
   <div class="row">
     <div class="col-md-12">
       <h1>
