--- a/datatags-app/app/views/interview/intro.scala.html
+++ b/datatags-app/app/views/interview/intro.scala.html
@@ -4,7 +4,7 @@
 @scripts = {
   <script type="text/javascript" src="@routes.Assets.at("js/InterviewIntro.js")"></script>
 }
-@templates.bsNavBar("Interview Start Page", 'tag, scripts) {
+@templates.bsNavBar("Interview Start Page", Symbol("tag"), scripts) {
   <div class="row my-2">
     <div class="col">
       <a href="@routes.Application.showModel(qKit.md.id.modelId)"><i class="fa fa-list"></i> Model Versions</a>
